--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         run: dotnet restore VirtualRadar.sln
 
       - name: Build project
-        run: build solution
+        run: ./build solution
