--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,22 +8,21 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-
+    env:
+         NUGET_PACKAGES: ${{ github.workspace }}/.nuget/packages
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-
-
 
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '8.0.x'
           cache: true
-
+          cache-dependency-path: subdir/packages.lock.json
+          
       - name: Restore dependencies
-        run: dotnet restore --packages packs VirtualRadar.sln
+        run: dotnet restore --locked-mode --packages packs VirtualRadar.sln
 
       - name: Build project
         run: ./build solution
