--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: vrscore
-          path:  D:/a/vrscore/
+          path:  D:/a/vrscore/vrscore/
 
