--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: vrscore
-          path:  D:/a/vrscore/vrscore/reléase.zip
+          path:  D:/a/vrscore/vrscore/release.zip
 
